syntax = "proto3";

package messenger_grpc;


service Greeter {
  rpc greet (GreetRequest) returns (GreetReply) {}
}

message GreetRequest {
  string name = 1;
}

message GreetReply {
  string message = 1;
}
